# WaveFlow

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Dockerfile.gateway  LICENSE  README.md  docker-compose.yml  render.yaml  rust-toolchain.toml
.github/workflows/: ci.yml
contracts/waveflow-escrow/: Cargo.toml
contracts/waveflow-escrow/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs  middleware.rs  startup.rs  state.rs
crates/api/src/routes/: admin.rs  mod.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: attestation.rs  main.rs  routes.rs  startup.rs  state.rs  webhook.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs  lib.rs  types.rs
docs/: PRD.md  README.md  ROADMAP.md  activity-log.md  core-loop.md  security-checklist.md
docs/api/: admin-routes.md  error-responses.md  gateway-webhooks.md  middleware-and-limits.md  rest-api.md
docs/architecture/: crate-boundaries.md  off-chain-on-chain-registration.md  overview.md  service-startup-differences.md
docs/configuration/: env-vars.md
docs/contracts/: contract-error-codes.md  contract-test-scenarios.md  event-topics-reference.md  initialize-and-roles.md  program-lifecycle-admin.md  storage-and-events.md  storage-keys-reference.md  waveflow-escrow.md
docs/database/: postgres-chain-state-drift.md  schema.md  webhook-events-audit.md
docs/deployment/: docker-compose.md  docker-images.md  render.md
docs/development/: SETUP.md  local-webhook-testing.md  testing.md
docs/gateway/: chain-submission-modes.md  idempotency-layers.md  payout-calculation.md  program-and-contributor-resolution.md  webhook-response-matrix.md
docs/operations/: monitoring.md  prometheus-metrics.md
docs/security/: webhook-hmac.md
docs/troubleshooting/: common-issues.md
docs/validation/: github-repo-slug-rules.md
fixtures/: merged_pr.json
migrations/: 001_init.sql  002_webhook_delivery_id.sql
scripts/: deploy-contract.sh
