# GitHub webhook gateway service that attests merged PRs to the Soroban escrow contract.
[package]
name = "waveflow-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "waveflow-gateway"
path = "src/main.rs"

[dependencies]
waveflow-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
subtle.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
http-body-util.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
